Update Genere.java